--- a/app/html/admin/totp.html
+++ b/app/html/admin/totp.html
@@ -12,7 +12,7 @@
         <fieldset>
           <div class="pure-control-group">
             <label for="username">@{_('One-time password')}</label>
-            @{authform.totp(required=True, autofocus=True, autocomplete='off')!!html}
+            @{authform.totp(required=True, autocomplete='off')!!html}
           </div>
           <div class="pure-controls">
             @if error:
