--- a/app/html/shared/post.html
+++ b/app/html/shared/post.html
@@ -84,13 +84,13 @@
         else:
             distinguish_text = ''
         blocked_text = _(' [Blocked]') if post['blur'] == 'block-blur' else ''
-        deleted_if_admin_view = ' ' + _('[Deleted]') if post['userstatus'] == 10 and current_user.is_admin() else ''
+        deleted_if_admin_view = ' ' + _('[deleted]') if post['userstatus'] == 10 and current_user.is_admin() else ''
 
         userlink = '<a class="authorlink" href="/u/' + post['user'] + '">' + post['user'] + deleted_if_admin_view + distinguish_text + blocked_text + '</a>' + flairspan
         if post['userstatus'] != 10 or current_user.is_admin():
             user_html = userlink
         else:
-            user_html = '<a class="authorlink deleted">' + _('[Deleted]') + '</a>'
+            user_html = '<a class="authorlink deleted">' + _('[deleted]') + '</a>'
         sublink = '<a href="/' + config.site.sub_prefix + '/' + post['sub'] + '">' + post['sub'] + '</a>'
         )
         @if not sub:
