--- a/app/html/site/log.html
+++ b/app/html/site/log.html
@@ -25,7 +25,7 @@
                         @if log.uid.status != 10:
                             <a href="/u/@{log.uid.name}">@{log.uid.name}</a>\
                         @else:
-                            @{_('[Deleted]')}
+                            @{_('[deleted]')}
                         @end
                     @end
                 </td>
