--- a/app/html/sub/log.html
+++ b/app/html/sub/log.html
@@ -27,7 +27,7 @@
           @if log.uid.status != 10:
           <a href="/u/@{log.uid.name}">@{log.uid.name}</a>\
           @else:
-          @{_('[Deleted]')}
+          @{_('[deleted]')}
           @end
           @end
         </div>
