--- a/app/html/sub/postcomments.html
+++ b/app/html/sub/postcomments.html
@@ -34,7 +34,7 @@
                 <a href="@{'/u/' + comment['user'] if current_user.is_admin() or comment['userstatus'] != 10 else '#'}" class="poster">
                   @{comment['user']}
                   @if current_user.is_admin() and comment['userstatus'] == 10:
-                     @{_('[Deleted]')}
+                     @{_('[deleted]')}
                   @end
                   @if comment['distinguish']:
                     <span class="speaking-tag">@{(comment['distinguish'] == 1) and _(' [speaking as mod]') or ''} @{(comment['distinguish'] == 2) and _(' [speaking as admin]') or ''}</span>
