--- a/app/html/user/comments.html
+++ b/app/html/user/comments.html
@@ -47,7 +47,7 @@
                   @if comment['post_deleted'] == 0 or current_user.is_admin() or comment['sid'] in current_user.subs_modded:
                     <span class="@{comment['blur']}">@{comment['title']}</span>
                   @else:
-                    @{_('[Deleted]')}
+                    @{_('[deleted]')}
                   @endif
                   @if comment['sub_nsfw'] or comment['nsfw']:
                     <div class="nsfw" title="@{_('Not safe for work')}">@{_('NSFW')}</div>
