--- a/app/html/shared/sidebar/user.html
+++ b/app/html/shared/sidebar/user.html
@@ -32,7 +32,7 @@
 @if user.uid == current_user.uid:
     <a href="@{url_for('user.edit_user')}" class="sbm-post pure-button @{(request.path == url_for('user.edit_user')) and 'pure-button-primary' or ''}">@{_('Preferences')}</a>
     <a href="@{url_for('user.edit_account')}" class="sbm-post pure-button @{(request.path == url_for('user.edit_account')) and 'pure-button-primary' or ''}">@{_('Account')}</a>
-    @if request.path == url_for('user.edit_account'):
+    @if request.path == url_for('user.edit_account') or request.path == url_for('user.delete_account'):
     <a href="@{url_for('user.delete_account')}" class="sbm-post pure-button @{(request.path == url_for('user.delete_account')) and 'pure-button-primary' or ''}">@{_('Delete account')}</a>
     @end
     @if not current_user.can_admin:
