--- a/app/html/index.html
+++ b/app/html/index.html
@@ -78,9 +78,15 @@
     @if page > 1:
       <a href="@{url_for(sort_type, page=(page-1), **kw)}" class="pure-button">@{_('Previous page')}</a>
     @end
-  @end
-  @if sort_type in ('home.all_domain_new'):
+  @elif sort_type in ('home.all_domain_new'):
     @if len(posts) == 25 and kw['post_count'] > 25:
+      <a href="@{url_for(sort_type, page=(page+1), **kw)}" class="pure-button">@{_('Next page')}</a>
+    @end
+    @if page > 1:
+      <a href="@{url_for(sort_type, page=(page-1), **kw)}" class="pure-button">@{_('Previous page')}</a>
+    @end
+  @elif not current_user.likes_scroll():
+      @if len(posts) == 25:
       <a href="@{url_for(sort_type, page=(page+1), **kw)}" class="pure-button">@{_('Next page')}</a>
     @end
     @if page > 1:
