--- a/app/html/index.html
+++ b/app/html/index.html
@@ -59,7 +59,7 @@
   @end
 
   @if not posts:
-    <h3 class="notfound">@{_('No posts were found.')}</h3>
+    <h3 class="notfound">@{_('No posts were found for the search term')} "@kw['term']". </h3>
   @end
   @if sort_type in ('home.all_domain_new'):
     <h4 class="notfound">@{_('We have')} @{kw['post_count']} @{_('posts from the domain')} <a href="https://@{kw['domain']}" target="_blank">@{kw['domain']}</a></h4>
