--- a/app/html/index.html
+++ b/app/html/index.html
@@ -58,10 +58,10 @@
     @end
   @end
 
-  @if not posts and sort_type in ('home.search'):
+  @if not posts and sort_type == 'home.search':
     <h3 class="notfound">@{_('No posts were found for the search term')} "@kw['term']". </h3>
   @end
-  @if sort_type in ('home.all_domain_new'):
+  @if sort_type == 'home.all_domain_new':
     <h4 class="notfound">@{_('We have')} @{kw['post_count']} @{_('posts from the domain')} <a href="https://@{kw['domain']}" target="_blank">@{kw['domain']}</a></h4>
   @end
   <div class="alldaposts">
@@ -71,14 +71,14 @@
       @end
     @end
   </div>
-  @if sort_type in ('home.search'):
+  @if sort_type == 'home.search':
     @if len(posts) == 25 and kw['search_count'] > 25:
       <a href="@{url_for(sort_type, page=(page+1), **kw)}" class="pure-button">@{_('Next page')}</a>
     @end
     @if page > 1:
       <a href="@{url_for(sort_type, page=(page-1), **kw)}" class="pure-button">@{_('Previous page')}</a>
     @end
-  @elif sort_type in ('home.all_domain_new'):
+  @elif sort_type == 'home.all_domain_new':
     @if len(posts) == 25 and kw['post_count'] > 25:
       <a href="@{url_for(sort_type, page=(page+1), **kw)}" class="pure-button">@{_('Next page')}</a>
     @end
@@ -105,7 +105,7 @@
   @if "labrat" in current_user.prefs:
     <label id="pagefoot-labrat" data-value="true" class="hide"></label>
   @end
-  @if sort_type in ('home.all_new'):
+  @if sort_type == 'home.all_new':
     <label id="pagefoot-blocked" data-value="@{current_user.blocksid}" class="hide"></label>
   @end
   <label id="pagefoot-admin" data-value="@{current_user.is_admin()}" class="hide"></label>
