Updating a deprecated meta name

--- a/app/html/shared/layout.html
+++ b/app/html/shared/layout.html
@@ -28,7 +28,7 @@
     <!-- mobile stuff -->
     <meta name="theme-color" content="white"/>
     <meta name="msapplication-navbutton-color" content="white"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent"/>
 
     <!--    <link rel="icon" href="@{url_for('static', filename='img/icon.png') }"> -->
