--- a/app/html/sub/postcomments.html
+++ b/app/html/sub/postcomments.html
@@ -162,11 +162,14 @@
                 @if comment['parentcid'] is None:
                   <li><a class="stick-comment" data-cid="@{comment['cid']}">@{comment['sticky'] and _('unstick') or _('make sticky')}</a></li>
                 @end
+                @if comment['sticky'] and not post['is_archived']:
+                  <li><a class="lock-comment" data-cid="@{comment['cid']}">@{comment['locked'] and _('unlock') or _('lock')}</a></li>
+                @end
               @end
               @if current_user.is_authenticated and comment['visibility'] == '' and (comment['uid'] == current_user.uid or current_user.is_admin() or current_user.uid in subMods['all']):
                 <li><a @{(comment['uid'] == current_user.uid) and 'selfdel="true"' or ''!!html} class="delete-comment" data-cid="@{comment['cid']}">@{_('delete')}</a></li>
               @end
-              @if current_user.is_authenticated and comment['visibility'] in ['', 'blur-block'] and not current_user.is_subban(post['sid']) and not postmeta.get('lock-comments') and post['deleted'] == 0 and not post['is_archived']:
+              @if current_user.is_authenticated and comment['visibility'] in ['', 'blur-block'] and not current_user.is_subban(post['sid']) and not postmeta.get('lock-comments') and post['deleted'] == 0 and not post['is_archived'] and not comment['locked']:
                 <li><a class="reply-comment" data-pid="@{comment['pid']}" data-to="@{comment['cid']}">@{_('reply')}</a></li>
               @end
             </ul>
