--- a/app/html/shared/sidebar/home.html
+++ b/app/html/shared/sidebar/home.html
@@ -42,7 +42,7 @@
   <div class="sidebarlists">
     <h4 class="center">@{_('Recent activity')}</h4>
     <ul class="top5" id="activity_list_sidebar">
-      @for post in func.recent_activity(sidebar=True, filter_shadowbanned=True):
+      @for post in func.recent_activity(sidebar=True, filter_shadowbanned=True, filter_private=True):
         <li>
           @if post['type'] == 'comment':
             @{_('%(user)s commented: %(text)s', user='<a href="/u/' + post['user'] + '">' + post['user'] + '</a>', text='<a class="title ' + post['blur'] + '" href="' + url_for('sub.view_perm', sub=post['sub'], cid=post['cid'], pid=post['pid'], slug=func.slugify(post['content'])) + '#comment-' + post['cid'] + '"><br>' + e(func.word_truncate(''.join(BeautifulSoup(markdown(post['content']), features='lxml').findAll(text=True)).replace('\n', ' '), 150)) + '</a>')!!html}
