--- a/app/html/shared/sidebar/sub.html
+++ b/app/html/shared/sidebar/sub.html
@@ -24,7 +24,10 @@
 <div class="subinfo">
   <h3><a href="@{url_for('sub.view_sub', sub=sub['name'])}">/@{config.site.sub_prefix}/@{sub['name']}</a> \
   @if sub['nsfw']:
-    <div class="nsfw" title="@{_('Not safe for work')}">@{_('NSFW')}</div> \
+    <div class="private" title="@{_('Not safe for work')}">@{_('NSFW')}</div> \
+  @end
+  @if sub['private']:
+    <div class="private" title="@{_('This sub is private.')}">@{_('PRIVATE')}</div> \
   @end
   </h3>
 </div>
@@ -137,6 +140,7 @@
     <a href="@{url_for('mod.reports_sub', sub=sub['name'])}" class="sbm-post pure-button">@{_('Sub Moderation')}</a>
   @end
   @if current_user.uid in subMods['all'] or current_user.is_admin():
+    <a href="@{url_for('sub.edit_sub_members', sub=sub['name'])}" class="sbm-post pure-button">@{_('Members')}</a>
     <a href="@{url_for('sub.edit_sub_mods', sub=sub['name'])}" class="sbm-post pure-button">@{_('Moderators')}</a>
   @end
 @end
