--- a/app/html/sub/log.html
+++ b/app/html/sub/log.html
@@ -8,7 +8,11 @@
 @def main():
 <div id="container" class="mod-container">
   <div class="content">
-    <h2>@{_('Sub log for <a href="%(url)s">/%(prefix)s/%(sub)s</a>', url=url_for('sub.view_sub', sub=sub['name']), prefix=config.site.sub_prefix, sub=sub['name'])!!html}</h2>
+    <h2>@{_('Sub log for <a href="%(url)s">/%(prefix)s/%(sub)s</a>', url=url_for('sub.view_sub', sub=sub['name']), prefix=config.site.sub_prefix, sub=sub['name'])!!html}
+    @if sub.private:
+      <span class="private" title="@{_('This sub is private.')}">@{_('PRIVATE')}</span>
+    @end
+    </h2>
     <ol class="mod-table">
       <li class="mod-table-header pure-g">
         <div class="header pure-u-1 pure-u-md-3-24">@{_('Time')}</div>
@@ -58,6 +62,14 @@
             @{_('Edited the sub\'s stylesheet')}
           @elif log.action == 30:
             @{_('Sub was transferred to <a href="/u/%(username)s">%(username)s</a>', username=e(log.desc))!!html}
+          @elif log.action == 35:
+            @{_('Revoked member invite for <a href="/u/%(username)s">%(username)s</a>', username=log.target.name)!!html}
+          @elif log.action == 36:
+            @{_('<a href="/u/%(username)s">%(username)s</a> accepted member invite', username=log.target.name)!!html}
+          @elif log.action == 37:
+            @{_('<a href="/u/%(username)s">%(username)s</a> refused member invite', username=log.target.name)!!html}
+          @elif log.action == 38:
+            @{_('<a href="/u/%(username)s">%(username)s</a> was removed from sub', username=log.target.name)!!html}
           @elif log.action == 50:
             @{_('Stickied a post')}
           @elif log.action == 51:
@@ -88,6 +100,12 @@
             @{_('Added sub to default subs')}
           @elif log.action == 85:
             @{_('Removed sub from default subs')}
+          @elif log.action == 86:
+            @{_('Set sub private')}
+          @elif log.action == 87:
+            @{_('Set sub public')}
+          @elif log.action == 88:
+            @{_('Invited member')}
           @else:
             <i>@{_('[Type %(type)i]', type=log.action)!!html}</i> @{log.desc}
           @end
