--- a/app/html/sub/user_flairs.html
+++ b/app/html/sub/user_flairs.html
@@ -13,7 +13,11 @@
   @end
   <div id="center-container">
     <div class="content mw-75">
-      <h1>@{_('Editing user flairs of <a href="%(url)s">%(sub)s</a>', url=url_for('sub.view_sub', sub=sub.name), sub="/" + config.site.sub_prefix + "/" + sub.name)!!html}</h1>
+      <h1>@{_('Editing user flairs of <a href="%(url)s">%(sub)s</a>', url=url_for('sub.view_sub', sub=sub.name), sub="/" + config.site.sub_prefix + "/" + sub.name)!!html}
+        @if sub.private:
+          <span class="private" title="@{_('This sub is private.')}">@{_('PRIVATE')}</span>
+        @end
+      </h1>
       <div class="col-12 admin-page-form">
         <form method="POST" class="ajaxform pure-form" action="@{url_for('do.mod_assign_flair', sub=sub.name)}" data-reload="true" id="assign_flair_form">
           <h4>@{_('Assign flair to user')}</h4>
