--- a/app/html/user/comments.html
+++ b/app/html/user/comments.html
@@ -107,7 +107,7 @@
                           <li><a class="noreplies-comment" data-cid="@{comment['cid']}">@{_('enable notifications')}</a></li>
                           @end
                         @end
-                        <li><a class="reply-comment" data-pid="@{comment['pid']}" data-to="@{comment['cid']}">@{_("reply")}</a></li>
+<!--                        <li><a class="reply-comment" data-pid="@{comment['pid']}" data-to="@{comment['cid']}">@{_("reply")}</a></li>-->
                       @end
                       @if comment['uid'] == current_user.uid or current_user.is_admin():
                             <li><a @{((comment['uid'] == current_user.uid) and 'selfdel="true"' or '')!!html} class="delete-comment" data-cid="@{comment['cid']}">@{_("delete")}</a></li>
