--- a/app/html/shared/sidebar/home.html
+++ b/app/html/shared/sidebar/home.html
@@ -40,7 +40,7 @@
 @if config.site.recent_activity.enabled:
   <hr/>
   <div class="sidebarlists">
-    <h4 class="center">@{_('Recent activity')}</h4>
+    <h4 class="center"><a href="/activity" style="text-decoration: none; color: inherit;">@{_('Recent activity')}</a></h4>
     <ul class="top5" id="activity_list_sidebar">
       @for post in func.recent_activity(sidebar=True, filter_shadowbanned=True, filter_private=True):
         <li>
