--- a/app/html/sub/log.html
+++ b/app/html/sub/log.html
@@ -9,7 +9,7 @@
 <div id="container" class="mod-container">
   <div class="content">
     <h2>@{_('Sub log for <a href="%(url)s">/%(prefix)s/%(sub)s</a>', url=url_for('sub.view_sub', sub=sub['name']), prefix=config.site.sub_prefix, sub=sub['name'])!!html}
-    @if sub.private:
+    @if sub['private']:
       <span class="private" title="@{_('This sub is private.')}">@{_('PRIVATE')}</span>
     @end
     </h2>
